# gestaltconfig

./: README.md  pyproject.toml
configs/: config.yaml
gestaltconfig/: config.py  singleton.py
tests/: test_config.py
